--- a/02. Javascript_on_the_Browser/index.html
+++ b/02. Javascript_on_the_Browser/index.html
@@ -7,7 +7,18 @@
     <title>Momentum App</title>
 </head>
 <body>
-    <h1 id="title">Grab me! </h1>
+    <h1 id="title">Hi! </h1>
+    <h1 class="hello">Grab me!!!</h1>
+    <h1 class="hello">Grab me!!!</h1>
+    <h1 class="hello">Grab me!!!</h1>
+    <h1 class="hello">Grab me!!!</h1>
+
+    <div class="omg">
+        <h1> OMG!</h1>
+    </div>
+
+
+
     <script src="app.js"></script>
 </body>
 </html>
