--- a/03. LOGIN/index.html
+++ b/03. LOGIN/index.html
@@ -7,7 +7,7 @@
     <title>Momentum App</title>
   </head>
   <body>
-    <form id="login-form">
+    <form class="hidden" id="login-form">
       <input
         required
         maxlength="15"
@@ -16,7 +16,7 @@
       />
       <input type="submit" value="Log In" />
     </form>
-    <h1 id="greeting" class="hidden"></h1>
+    <h1 class="hidden" id="greeting"></h1>
     <script src="app.js"></script>
   </body>
 </html>
